--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ section .title::after{
     color: crimson;
 }
 .navbar.sticky .menu li a:hover{
-    color: #fff;
+    color: black;
 }
 
 /* menu btn styling */
@@ -389,6 +389,8 @@ section .title::after{
     width: calc(50% - 30px);
 }
 .teams .carousel .card{
+    width: 370px; /* Set a fixed width for each card */
+    height: 460px; /* Set a fixed height for each card */
     background: lightgray;
     border-radius: 6px;
     padding: 25px 35px;
@@ -729,10 +731,10 @@ footer span a:hover{
 }
 
 .projects .card img {
-    height: 150px;
-    width: 150px;
+    height: 250px;
+    width: 350px;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 0%;
     border: 5px solid crimson;
     transition: all 0.3s ease;
 }
@@ -741,3 +743,40 @@ footer span a:hover{
     border-color: #fff;
 }
 
+/* navbar styling */
+.navbar1{
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    padding: 30px 0;
+    font-family: 'Ubuntu', sans-serif;
+    transition: all 0.3s ease;
+    background: crimson;
+}
+
+.navbar1 .max-width{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar1 .logo a{
+    color: #fff;
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.navbar1 .menu li{
+    list-style: none;
+    display: inline-block;
+}
+.navbar1 .menu li a{
+    display: block;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 25px;
+    transition: color 0.3s ease;
+}
+.navbar1 .menu li a:hover{
+    color: black;
+}
