--- a/style.css
+++ b/style.css
@@ -690,7 +690,7 @@ footer span a:hover{
 
 /* projects section styling */
 .projects .title::after {
-    content: "contribution";
+    content: "what i've done";
 }
 
 .projects .grid-container {
